--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: TestModule
 Type: Package
-Title: Test Module Module for JASP
-Version: 1.0
-Date: 2020-06-29
+Title: Wait for it... Module for JASP
+Version: 1.0.0
+Date: 2020-07-17
 Author: Joris Goosen
 Website: 
 Maintainer: Joris Goosen <Joris@JorisGoosen.nl>
