--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,12 +1,3 @@
-export(testTransposedTableFunc)
-export(testFootnotesTableFunc)
-export(testStateFunc)
-export(testHtmlFunc)
-export(testContainerFunc)
-export(testPlotStatus)
-export(testEncodingFunc)
-export(customContrasts)
-export(testSaveLoadButton)
-export(customContrasts)
+exportPattern('^[[:alpha:]]+')
   import('svglite');
   import('stringi');
