--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,4 @@ jobs:
 
     steps:          
       - name: Run a one-line script
-        run: echo "Hello $GITHUB_REPOSITORY"
+        run: echo "Hello $GITHUB_REPOSITORY and ${{ secrets.GITHUB_TOKEN }}"
