--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Run a one-line script
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: echo "Hello $GITHUB_REPOSITORY and ${{ secrets.GITHUB_TOKEN }} and ${github.token} and ${env.GITHUB_TOKEN}"
+        run: echo "Hello $GITHUB_REPOSITORY and ${{ secrets.GITHUB_TOKEN }} and $GITHUB_TOKEN"
