--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -19,4 +19,4 @@ jobs:
 
       - uses: jasp-stats/jasp-actions/translations@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
