--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -19,5 +19,4 @@ jobs:
 
       - uses: jasp-stats/jasp-actions/translations@master
         env:
-          TOKEN: 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
-          # ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
