--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,10 @@ jobs:
 
     steps:          
       - name: Run a one-line script
+        shell: bash
         env:
-          MY_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: echo "Hello $GITHUB_REPOSITORY and ${{ secrets.GITHUB_TOKEN }} and $MY_TOKEN"
+          REPO: ${{ github.event.repository.name }}
+          OWNER: ${{ github.event.repository.owner.login }}
+          PULL_ID: 21
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: .github/mergePR.sh
