--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,8 @@ jobs:
   run-test:
     runs-on: ubuntu-latest
 
-    steps:          
+    steps:
+      - uses: actions/checkout@v2
       - name: Run a one-line script
         shell: bash
         env:
