--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,8 @@ name: test-action
 
 on:
   workflow_dispatch:
-  #schedule:
-  # UTC, https://docs.github.com/en/actions/reference/events-that-trigger-workflows#scheduled-events
-  #- cron: '0/5 * * * *'
+  schedule:
+  - cron: '0/5 * * * *'
 
 jobs:
   run-test:
@@ -15,8 +14,8 @@ jobs:
       - name: Run a one-line script
         shell: bash
         env:
-          REPO: ${{ github.event.repository.name }}
-          OWNER: ${{ github.event.repository.owner.login }}
+          REPO: jaspTestModule #${{ github.event.repository.name }}
+          OWNER: jasp-stats #${{ github.event.repository.owner.login }}
           PULL_ID: 21
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: .github/mergePR.sh
