--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,8 @@ name: test-action
 
 on:
   workflow_dispatch:
-  schedule:
-  - cron: '0/5 * * * *'
+  #schedule:
+  #- cron: '0/5 * * * *'
 
 jobs:
   run-test:
