--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,11 +16,11 @@ jobs:
         env:
           REPO: jaspTestModule #${{ github.event.repository.name }}
           OWNER: jasp-stats #${{ github.event.repository.owner.login }}
-          PULL_ID: 21
+          PULL_ID: 23
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
         #run: .github/mergePR.sh
         run: |
             curl -s -X PUT https://api.github.com/repos/$OWNER/$REPO/pulls/$PULL_ID/merge \
             -d '{"commit_title":"myCommit", "merge_method": "squash"}' \
-            -H "Authorization: Bearer ${{ secrets.TEST_SECRET }}"
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"
             
