--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,10 @@ jobs:
           OWNER: jasp-stats #${{ github.event.repository.owner.login }}
           PULL_ID: 23
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: gh pr merge 23
         #run: .github/mergePR.sh
-        run: |
-            curl -s -X PUT https://api.github.com/repos/$OWNER/$REPO/pulls/$PULL_ID/merge \
-            -d '{"commit_title":"myCommit", "merge_method": "squash"}' \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"
+        #run: |
+        #    curl -s -X PUT https://api.github.com/repos/$OWNER/$REPO/pulls/$PULL_ID/merge \
+        #    -d '{"commit_title":"myCommit", "merge_method": "squash"}' \
+        #    -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"
             
