--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
           REPO: jaspTestModule #${{ github.event.repository.name }}
           OWNER: jasp-stats #${{ github.event.repository.owner.login }}
           PULL_ID: 23
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gh pr merge 23
         #run: .github/mergePR.sh
         #run: |
