--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -1,7 +1,7 @@
 on:
-  #schedule:
-  #  - cron:  '*/5 * * * *'
-  #  
+  schedule:
+    - cron:  '*/5 * * * *'
+    
   workflow_dispatch:
 
 name: generate-translations
