--- a/.github/workflows/callActionWlc.yml
+++ b/.github/workflows/callActionWlc.yml
@@ -12,4 +12,5 @@ jobs:
         env:
           WEBLATE_KEY: ${{ secrets.WEBLATE_KEY }}
           QML_REPO: jasptestmodule-qml
+          R_REPO: jasptestmodule-r
  
