--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -20,3 +20,6 @@ jobs:
       - uses: jasp-stats/jasp-actions/translations@master
         env:
           GITHUB_TOKEN: ${{ secrets.REPO_KEY }}
+          WEBLATE_KEY: ${{ secrets.WEBLATE_KEY }}
+          QML_REPO: jasptestmodule-qml
+          R_REPO: jasptestmodule-r
