--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -8,7 +8,7 @@ name: generate-translations
 
 jobs:
   generate-translations:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     env:
       GITHUB_TOKEN: ${{ secrets.REPO_KEY }}
       WEBLATE_KEY: ${{ secrets.WEBLATE_KEY }}
