--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -12,12 +12,15 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.REPO_KEY }}
       WEBLATE_KEY: ${{ secrets.WEBLATE_KEY }}
+      QM_REPO: jasptestmodule-qml
       R_REPO: jasptestmodule-r
 
     steps:
       - uses: jasp-stats/jasp-actions/wlcLock@master
       
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.REPO_KEY }}
 
       - uses: r-lib/actions/setup-r@master
         with:
