--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -10,20 +10,12 @@ jobs:
   generate-translations:
     runs-on: ubuntu-latest
     env:
-      GITHUB_TOKEN: ${{ secrets.REPO_KEY }}
+      REPO_KEY: ${{ secrets.REPOS_KEY }}
       WEBLATE_KEY: ${{ secrets.WEBLATE_KEY }}
-      QM_REPO: jasptestmodule-qml
-      R_REPO: jasptestmodule-r
+      QML_REPO: jaspdescriptives-qml
+      R_REPO: jaspdescriptives-r
 
     steps:
       - uses: jasp-stats/jasp-actions/wlcLock@master
-      
-      - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.REPO_KEY }}
-
-      - uses: r-lib/actions/setup-r@master
-        with:
-          r-version: "4.0.5"
 
       - uses: jasp-stats/jasp-actions/translations@master
